syntax = "proto3";

package v1;

option go_package = "/consensus/ibft2/proto";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

service Ibft {
    rpc Message(MessageReq) returns (google.protobuf.Empty);
}

message MessageReq {
    oneof message {
        Preprepare preprepare = 1;
        Subject prepare = 2;
        Subject commit = 3;
        Subject roundChange = 4;
    }
}

message Preprepare {
    View view = 1;
    Proposal proposal = 2;
}

message Subject {
    View view = 1;
    string digest = 2;
}

message View {
    uint64 round = 1;
    uint64 sequence = 2;
}

message Proposal {
    google.protobuf.Any block = 1;
}